Fix main column not centered

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,6 @@ a:hover {
 .main-column {
   display: block;
   text-align: initial;
-  margin: 0 auto 64px 0;
+  margin: 0 auto 64px auto;
   max-width: 1080px;
 }
